# actix_tryout

./: Cargo.toml
example_code/: api.rs  fully_descentralized.rs  health.rs  users.rs
migrations/2026-01-06-223627-0000_users/: up.sql
src/: main.rs
src/db/: mod.rs
src/handlers/: user_handler.rs
src/models/: mod.rs  user.rs  user_schema.rs
src/routes/: user_routes.rs
src/services/: user_services.rs
