[package]
name = "actix-tryout"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
diesel = { version = "2.3.5", features = ["uuid", "postgres", "chrono","r2d2", "serde_json"]}
dotenv = "0.15.0"
env_logger = "0.11.8"
r2d2 = "0.8.10"
serde = "1.0.228"
serde_json = "1.0.148"
surfai = "0.1.2"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
