[package]
name = "actix-tryout"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.5", features = ["uuid", "postgres", "chrono","r2d2", "serde_json"]}
dotenv = "0.15.0"
env_logger = "0.11.8"
jsonwebtoken = "10.2.0"
openssl-probe = "0.2.0"
r2d2 = "0.8.10"
serde = "1.0.228"
serde_json = "1.0.148"
surfai = "0.1.2"
tokio = { version = "1.48.0", features = ["full"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
